--- a/ui_files/OptimizerUI.ui
+++ b/ui_files/OptimizerUI.ui
@@ -333,12 +333,12 @@
            </item>
            <item>
             <property name="text">
-             <string>LoraEasyCustomOptimizer.automagic_adams.Automagic_AdamS</string>
+             <string>Automagic_AdamS</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>LoraEasyCustomOptimizer.automagic_cameamp_improved.Automagic_CAMEAMP_Improved</string>
+             <string>Automagic_Hina_Improved</string>
             </property>
            </item>
           </widget>
